# ccd-snr-paper

./: .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: black.yml  tests.yml
ccd_snr/: __init__.py  _acronyms.py  _authors.py  _authors_test.py  _document.py  _document_test.py  _variables.py  sources.bib
ccd_snr/figures/: __init__.py  _probability_measurement.py  _qe_effective.py
ccd_snr/sections/: __init__.py  _abstract.py  _introduction.py  _model.py
docs/: conf.py  index.rst
